[tool.poetry]
name = "steer-the-story"
version = "0.1.0"
description = ""
authors = ["Bram Adams <3282661+bramses@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "steer_the_story"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
